@@ -38,3 +38,7 @@
 468,1 //SL_STUN
 469,1 //SL_SMA
 1014,1	//PR_REDEMPTIO
+10010,1	//GD_BATTLEORDER
+10011,1	//GD_REGENERATION
+10012,1	//GD_RESTORE
+10013,1	//GD_EMERGENCYCALL
