@@ -26,6 +26,8 @@
 		* * * From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP [Komurka]
 =========================
 
+01/02
+	* Added active guild skills to skill_castnodex_db [Skotlex]
 01/01
 	* Corrected char name filter? [Vicious]
 
